--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,41 @@
 @import 'core/settings';
 
 body {
-
 	height: 100vh;
+}
+.titulo{
+  text-align: center;
+  font-family: arial;
+}
+.content-formulario{
+  display: flex;
+  justify-content: center;
+
+}
+.button-comenzar{
+  background:  #ffffff;
+  border-style:none;
+  font-size: 16px￼;
+  font-weight: bold;
+  border: 2px solid #33ccff;
+  border-radius: 5px;
+  margin-left: 10px;
+
+}
+.lista{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+
+}
+.tarjeta{
+  list-style: none;
+
+}
+.imagen-pokemon{
+  height: 195px;
+  width: 160px;
+  border: 1px solid;
+  border-radius: 5px;
+  margin: 15px;
 }
