--- a/scss/main.scss
+++ b/scss/main.scss
@@ -39,3 +39,14 @@ body {
   border-radius: 5px;
   margin: 15px;
 }
+.imagen-pokemon-2{
+  height: 195px;
+  width: 160px;
+  border: 1px solid;
+  border-radius: 5px;
+  margin: 15px;
+}
+.hidden{
+   display:none;
+
+}
